--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/Pec1.jpg" alt="PEC Chandigarh" /></div><div class="content">
+							<div class="image"><img src="images/Pec1.JPG" alt="PEC Chandigarh" /></div><div class="content">
 								<h2>PEC Centenary GATE-1921-2021<br />
 								</h2>
 								<p>Designed College Gate Nameplate CAD Model for 100 years of PEC Celebration 2021 and building at the entrance of PEC.<br> Designing Done in Autodesk Fusion 360.</p>
