--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<!--<a href="#menu" class="menuToggle"><span>Menu</span></a>-->
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
@@ -55,11 +55,11 @@
 							<header class="major">
 								<h2>About Me<br />
 								</h2>
-								<p>Hi, my name is Prabhanshu, and I enjoy exploring new technology.
-									<br> I enjoy learning and exploring new things, doing research, coming to insightful conclusions, and observing trends.
-									<br> A career in data science is what I want to pursue. Among my interests are data analysis, machine learning, and artificial intelligence.
+								<p>Hi, my name is Prabhanshu, and I love exploring new technology.
+									<br> I enjoy learning and exploring new things, doing research, observing trends and coming to insightful conclusions,.
+									<br> A career in data science is what I want to pursue.My interests include data analysis, machine learning, and artificial intelligence.
 									<br> I'm also good at communicating, leading, and working in teams. While working on numerous datasets, automating reports to save time, creating dashboards, etc.
-									<br> During my internships, I have become proficient with technologies like Python, Tableau, Selenium,Data Scraping and many more.</p>
+									<br> During my internships, I have become proficient with technologies like Python, Tableau, Selenium, Data Scraping and many more.</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
@@ -101,7 +101,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Resume</h2>
-								<p>Follow here to Download <a href="#">My Full Resume</a><br />
+								<p>Follow here to View <a href="https://drive.google.com/file/d/1ECpF7nLz4gJMVkaMEBIoYzkJRZNpfhmH/view?usp=sharing">My Full Resume</a><br />
 								</p>
 							</header>
 							<ul class="features">
