--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Resume</h2>
-								<p>Follow here to View <a href="https://drive.google.com/file/d/1ECpF7nLz4gJMVkaMEBIoYzkJRZNpfhmH/view?usp=sharing">My Full Resume</a><br />
-								</p>
+<!-- 								<p>Follow here to View <a href="https://drive.google.com/file/d/1ECpF7nLz4gJMVkaMEBIoYzkJRZNpfhmH/view?usp=sharing">My Full Resume</a><br /> -->
+<!-- 								</p> -->
 							</header>
 							<ul class="features">
 								<li class="icon solid fa-laptop">
