changed the first page of portfolio

--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<html lang="en">
 	<head>
 		<title>Prabhanshu Sahu Portfolio</title>
 		<meta charset="utf-8" />
@@ -23,15 +18,15 @@
 						<nav id="nav">
 							<ul>
 								<li class="special">
-									<!--<a href="#menu" class="menuToggle"><span>Menu</span></a>-->
+									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
-										<ul>
+										<!-- <ul> -->
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
-										</ul>
+											<li><a href="#one">About</a></li>
+											<li><a href="#two">Experience</a></li>
+											<li><a href="#three">Projects</a></li>
+											<li><a href="#cta">Contact</a></li>
+										<!-- </ul> -->
 									</div>
 								</li>
 							</ul>
@@ -40,11 +35,16 @@
 
 				<!-- Banner -->
 					<section id="banner">
+						<div class="image">
+							<img src="images\My DP.jpeg" alt="My DP">
+						</div>
 						<div class="inner">
-							<h2>Prabhanshu Sahu<br>Portfolio</h2>
-							<p>Production and Industrial Engineering<br> Punjab Engineering College, 2023<br />
-							Data Science Enthusiast<br />
-							<!--crafted by <a href="http://html5up.net">HTML5 UP</a>.--></p>
+							<p>Hi, I'm</p>
+							<h2>Prabhanshu Sahu<br></h2>
+							<br />
+							<button>CV</button>
+        					<button>Contact</button>
+							<ul><li><a href="https://www.linkedin.com/in/prabhanshu-sahu-a34677196/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li></ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -101,37 +101,35 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Resume</h2>
-<!-- 								<p>Follow here to View <a href="https://drive.google.com/file/d/1ECpF7nLz4gJMVkaMEBIoYzkJRZNpfhmH/view?usp=sharing">My Full Resume</a><br /> -->
-<!-- 								</p> -->
 							</header>
 							<ul class="features">
 								<li class="icon solid fa-laptop">
 									<h3>internships</h3>
-									<p> <b>Operations Analyst - Intern @ FabHotels</b><br> 
-										o Created Trackers using <b>Power Pivots, Python and SQL</b> to track and Identification of Problems in different processes which leading to <b>reduction in Average Billing by 30 days.</b><br>
-										o <b>Developed analytics trends using Tableau</b> displaying important business metrics like Invoicing, Collections MoM and WoW achieved etc.<br>
+									<!-- <p> <b>Operations Analyst - Intern @ FabHotels</b><br>  -->
+										<!-- o Created Trackers using <b>Power Pivots, Python and SQL</b> to track and Identification of Problems in different processes which leading to <b>reduction in Average Billing by 30 days.</b><br> -->
+										<!-- o <b>Developed analytics trends using Tableau</b> displaying important business metrics like Invoicing, Collections MoM and WoW achieved etc.<br> -->
 										<!--o Automated FabHotels internal manual tasks using Selenium saving man-hours and improving process efficiency – Worked on Data Scraping and Automating using Python.<br>-->
 									</p>
 								</li>
 								<li class="icon solid fa-code">
 									<h3>Tools and Technologies</h3>
-									<p>SQL, Tableau, Python, Excel, PowerPoint, C++, ANSYS, Solidworks, Fusion 360, Jupyter Notebook, Selenium, Google Analytics, Adobe Photoshop.
-									<br>Linear/Logistic Regression, Pandas, Decision Tree, CART, Random Forest, Matplotlib, NumPy, Power Pivots, Lookups, Statistics, Data Scraping.</p>
+									<!-- <p>SQL, Tableau, Python, Excel, PowerPoint, C++, ANSYS, Solidworks, Fusion 360, Jupyter Notebook, Selenium, Google Analytics, Adobe Photoshop.
+									<br>Linear/Logistic Regression, Pandas, Decision Tree, CART, Random Forest, Matplotlib, NumPy, Power Pivots, Lookups, Statistics, Data Scraping.</p> -->
 								</li>
 								<li class="icon fa-heart">
 									<h3>Extracurricular Acheivements</h3>
 									<p>
-										<b>Sports :</b> Got Bronze Medals for 200m and 110m Hurdle Race in Athletic meet 2016.<br>
+										<!-- <b>Sports :</b> Got Bronze Medals for 200m and 110m Hurdle Race in Athletic meet 2016.<br>
 										<b>Social Work (NSS PEC) :</b> Volunteered in organizing Blood donation Camps,7 Day Camps, Swacchta Abhiyan.<br>
-										<b>Intra PEC :</b> Won Prizes in Intra college Events in PECFEST in Robo race, Treasure hunts etc.<br>
+										<b>Intra PEC :</b> Won Prizes in Intra college Events in PECFEST in Robo race, Treasure hunts etc.<br> -->
 										</p>
 								</li>
 								<li class="icon fa-flag">
 									<h3>Positions of Responsibility</h3>
-									<p><b>Event Coordinator :</b> FabHotels Premiere league (FHPL), 2022<br>
+									<!-- <p><b>Event Coordinator :</b> FabHotels Premiere league (FHPL), 2022<br>
 										<b>Technical Event Coordinator :</b> 2nd International Conference on Industrial and Manufacturing Systems (CIMS-2021)<br>
 										<b>Sub – Coordinator :</b> , Robotics Society PEC, 2020<br>
-									</p>
+									</p> -->
 								</li>
 								<li class="icon solid fa-headphones-alt">
 									<h3>Hobbies</h3>
@@ -139,8 +137,8 @@
 								</li>
 								<li class="icon fa-paper-plane">
 									<h3>My CAD Portfolio</h3>
-									<p>	Here is a glimpse of some CAD models I made. <br>
-									<a href = "https://grabcad.com/prabhanshu.sahu-1">My CAD Portfolio</a>
+									<!-- <p>	Here is a glimpse of some CAD models I made. <br>
+									<a href = "https://grabcad.com/prabhanshu.sahu-1">My CAD Portfolio</a> -->
 									</p>
 								</li>
 							</ul>
