changed the secondary pages and updated the whole portfolio

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 						<h1><a href="index.html">Prabhanshu Sahu</a></h1>
 						<nav id="nav">
 							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
+								<!-- <li class="special"> -->
+									<!-- <a href="#menu" class="menuToggle"><span>Menu</span></a> -->
+									<!-- <div id="menu"> -->
 										<!-- <ul> -->
 											<li><a href="index.html">Home</a></li>
 											<li><a href="#one">About</a></li>
-											<li><a href="#two">Experience</a></li>
-											<li><a href="#three">Projects</a></li>
+											<li><a href="#two">Projects</a></li>
+											<li><a href="#three">Experience</a></li>
 											<li><a href="#cta">Contact</a></li>
 										<!-- </ul> -->
-									</div>
-								</li>
+									<!-- </div> -->
+								<!-- </li> -->
 							</ul>
 						</nav>
 					</header>
@@ -43,8 +43,9 @@
 							<h2>Prabhanshu Sahu<br></h2>
 							<br />
 							<button>CV</button>
-        					<button>Contact</button>
-							<ul><li><a href="https://www.linkedin.com/in/prabhanshu-sahu-a34677196/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li></ul>
+        					<button><a href="#cta">Contact</a></button>
+							<ul><li><a href="https://www.linkedin.com/in/prabhanshu-sahu-a34677196/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+								<li><a href="mailto:prabhanshusahu@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li></ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -56,10 +57,10 @@
 								<h2>About Me<br />
 								</h2>
 								<p>Hi, my name is Prabhanshu, and I love exploring new technology.
-									<br> I enjoy learning and exploring new things, doing research, observing trends and coming to insightful conclusions,.
-									<br> A career in data science is what I want to pursue.My interests include data analysis, machine learning, and artificial intelligence.
-									<br> I'm also good at communicating, leading, and working in teams. While working on numerous datasets, automating reports to save time, creating dashboards, etc.
-									<br> During my internships, I have become proficient with technologies like Python, Tableau, Selenium, Data Scraping and many more.</p>
+									<br> Passionate about solving complex problems> and always eager to take on new challenges in the world of data.
+									<br> With a strong foundation in<b> development and automation</b>, I excel at creating efficient solutions that streamline processes, while my business analysis acumen ensures that every decision is data-driven and aligned with organizational goals
+									<br> A firm believer in teamwork—whether it's in the office or on the cricket field, I thrive when working collaboratively to achieve great results.
+									<br> With my current experience, I have become proficient in technologies like <b>Python, SQL, C#, .NET, Power BI, Selenium, and AWS</b> allowing me to develop robust RESTful APIs and automate workflows, while leveraging my expertise to drive data-driven decision-making and build efficient solutions across both backend and data domains.</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
@@ -71,6 +72,18 @@
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><img src="images\logo_hhax.svg" alt="logo_hhax" /></div><div class="content">
+								<h2>Unified Consumer Portal (UCP)<br />
+								</h2>
+								<p>A Visit Management Portal managing the Caregiver Services for the Patients in US Healthcare providers for Different States <br>
+									Designed and implemented RESTful APIs to integrate multiple services, focusing on .NET-based backend systems. Resolved UI and API bugs, enhancing both system performance and user experience. <br>
+									Led Clients discussions and Product Demos gathering requirements for product expansion,resulting in the successful product deployment in 4 additional US States (TX, MI, MA, MN) driving business growth. <br>
+									Data driven Test Automation: Built data driven automation strategies using Python selenium for over 200 test cases to streamline workflows, minimizing manual testing effort by 50% and saving 8 hours per week in operational time, increasing productivity. <br>
+									<!-- Spearheaded testing initiatives for Regression, Accessibility, Security, Integration, and API Testing via Postman,ensuring 100% compliance with security and accessibility standards (WCAG 2.2).<br> -->
+								</p>
+							</div>
+						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/PythonWebScraping.png" alt="Web Scraping" /></div><div class="content">
 								<h2>Python Web Scraper<br />
@@ -87,58 +100,42 @@
 								Designing Done in Autodesk Fusion 360. Stress analysis Performed in Autodesk Fusion 360 and ANSYS.</p>
 							</div>
 						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/PEC.jpg" alt="PEC Chandigarh" /></div><div class="content">
-								<h2>PEC Centenary GATE-1921-2021<br />
-								</h2>
-								<p>Designed College Gate Nameplate CAD Model for 100 years of PEC Celebration 2021 and building at the entrance of PEC.<br> Designing Done in Autodesk Fusion 360.</p>
-							</div>
-						</section>
 					</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Resume</h2>
+								<h2>Experience</h2>
 							</header>
 							<ul class="features">
 								<li class="icon solid fa-laptop">
-									<h3>internships</h3>
-									<!-- <p> <b>Operations Analyst - Intern @ FabHotels</b><br>  -->
-										<!-- o Created Trackers using <b>Power Pivots, Python and SQL</b> to track and Identification of Problems in different processes which leading to <b>reduction in Average Billing by 30 days.</b><br> -->
-										<!-- o <b>Developed analytics trends using Tableau</b> displaying important business metrics like Invoicing, Collections MoM and WoW achieved etc.<br> -->
-										<!--o Automated FabHotels internal manual tasks using Selenium saving man-hours and improving process efficiency – Worked on Data Scraping and Automating using Python.<br>-->
-									</p>
+									<h3>Programming Languages</h3>
+									<p>Python, SQL, C#, HTML, CSS, JavaScript, AWS</p>
 								</li>
 								<li class="icon solid fa-code">
-									<h3>Tools and Technologies</h3>
-									<!-- <p>SQL, Tableau, Python, Excel, PowerPoint, C++, ANSYS, Solidworks, Fusion 360, Jupyter Notebook, Selenium, Google Analytics, Adobe Photoshop.
-									<br>Linear/Logistic Regression, Pandas, Decision Tree, CART, Random Forest, Matplotlib, NumPy, Power Pivots, Lookups, Statistics, Data Scraping.</p> -->
+									<h3>Frameworks and Tools</h3>
+									<p>
+										.NET, Entity Framework Core, ASP.NET Core, Selenium, Postman, Git, Bitbucket, Azure, Owasp, Excel, PostgreSQL, Jmeter
+									</p>
 								</li>
 								<li class="icon fa-heart">
-									<h3>Extracurricular Acheivements</h3>
-									<p>
-										<!-- <b>Sports :</b> Got Bronze Medals for 200m and 110m Hurdle Race in Athletic meet 2016.<br>
-										<b>Social Work (NSS PEC) :</b> Volunteered in organizing Blood donation Camps,7 Day Camps, Swacchta Abhiyan.<br>
-										<b>Intra PEC :</b> Won Prizes in Intra college Events in PECFEST in Robo race, Treasure hunts etc.<br> -->
-										</p>
+									<h3>Business Analysis</h3>
+									<p>SQL, Tableau, Power BI, Data Analysis, Excel, Requirement Gathering, Stakeholder Management, Data Reporting, and Dashboard Creation 
+									</p>
 								</li>
 								<li class="icon fa-flag">
-									<h3>Positions of Responsibility</h3>
-									<!-- <p><b>Event Coordinator :</b> FabHotels Premiere league (FHPL), 2022<br>
-										<b>Technical Event Coordinator :</b> 2nd International Conference on Industrial and Manufacturing Systems (CIMS-2021)<br>
-										<b>Sub – Coordinator :</b> , Robotics Society PEC, 2020<br>
-									</p> -->
+									<h3>Soft Skills</h3>
+									<p> Quality Assurance, Team Collaboration, Leadership Skills, Problem Solving, Communication, Time Management, 
+									</p>
 								</li>
 								<li class="icon solid fa-headphones-alt">
 									<h3>Hobbies</h3>
-									<p>Cricket, Listening Music, Travelling, Exercising.</p>
+									<p>Cricket, Listening Music, Travelling, Board Gaming, Exercising.</p>
 								</li>
 								<li class="icon fa-paper-plane">
-									<h3>My CAD Portfolio</h3>
-									<!-- <p>	Here is a glimpse of some CAD models I made. <br>
-									<a href = "https://grabcad.com/prabhanshu.sahu-1">My CAD Portfolio</a> -->
+									<h3>Languages</h3>
+									<p>English, Hindi, Punjabi, Japanese (Learning), German (Learning)
 									</p>
 								</li>
 							</ul>
@@ -176,14 +173,11 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
-							<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
 							<li><a href="https://www.linkedin.com/in/prabhanshu-sahu-a34677196/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
-							<!--<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
 							<li><a href="mailto:prabhanshusahu@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Prabhanshu Sahu @ 2023</li><li>Designed By: <a href="http://html5up.net">Prabhanshu Sahu</a></li>
+							<li>&copy; Prabhanshu Sahu @ 2023</li><li>Designed By: <a href="#banner">Prabhanshu Sahu</a></li>
 						</ul>
 					</footer>
 
