--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Prabhanshu Sahu Portfolio</title>
+		<link rel="icon" type="image/x-icon" href="images\briefcase_342792.png" id="favicon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -166,7 +167,7 @@
 							  </form>
 						</div> 	
 						<div id="status"></div>
-						<script src="./assets/js/main2.js"></script>
+						
 
 					</section>		
 
@@ -191,6 +192,8 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/main2.js"></script>
+			<script src="assets/js/favicon.js"></script>
 
 	</body>
 </html>
