--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<p>Hi, I'm</p>
 							<h2>Prabhanshu Sahu<br></h2>
 							<br />
-							<button>CV</button>
+							<button><a href="assets\Prabhanshu Sahu resume - QA.pdf" target="_blank">CV</a></button>
         					<button><a href="#cta">Contact</a></button>
 							<ul><li><a href="https://www.linkedin.com/in/prabhanshu-sahu-a34677196/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 								<li><a href="mailto:prabhanshusahu@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li></ul>
